# Draftly-SmartGmail

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/agent/: __init__.py  draftly_agent.py
src/api/: routes.py
src/config/: settings.py
src/db/: __init__.py  models.py  session.py
src/services/: __init__.py  gmail_service.py
src/tools/: __init__.py  db_tools.py  gmail_tools.py
