[project]
name = "draftly"
version = "0.1.0"
description = ""
authors = [
    {name = "Samarth-Prajapati",email = "samarthp475@gmail.com"}
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "google-auth (>=2.53.0,<3.0.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)",
    "google-auth-httplib2 (>=0.4.0,<0.5.0)",
    "google-api-python-client (>=2.196.0,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "deepagents (>=0.6.3,<0.7.0)",
    "langgraph (>=1.2.1,<2.0.0)",
    "streamlit (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
